fixed the spacing for the description

--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,7 @@ body {
 
 .description{
   font-size: 18px;
-  margin: 2em;
+  margin: 0 20% ;
 }
 
 button {
